[gd_scene load_steps=6 format=2]

[ext_resource path="res://core/world/tiles/objects/tree_stump_04.png" type="Texture" id=1]
[ext_resource path="res://core/world/tiles/objects/ChoppingBlock/ChoppingBlock.gd" type="Script" id=2]
[ext_resource path="res://utils/ActionMenu/ActionProgress.tscn" type="PackedScene" id=3]
[ext_resource path="res://utils/ActionMenu/ActionMenu.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 27.0508

[node name="ChoppingBlock" type="Area2D"]
collision_layer = 17
collision_mask = 17
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.407806, 3.05857 )
shape = SubResource( 1 )

[node name="ActionMenu" parent="." instance=ExtResource( 4 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -50.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 100 )

[node name="ActionProgress" parent="." instance=ExtResource( 3 )]
visible = false
margin_left = 140.0
margin_top = -50.0
margin_right = 140.0
margin_bottom = -50.0
[connection signal="input_event" from="." to="." method="_on_ChoppingBlock_input_event"]
